# ableguides

./: .env.example  .gitignore  README.md  ableguides.toml.example  cues.json  pyproject.toml
src/ableguides/: __init__.py  __main__.py  als.py  assembler.py  audio.py  cli.py  config.py  midi.py  models.py  patcher.py  paths.py  report.py  tts.py
templates/: rack_footer.xml  rack_header.xml  single_pad_template.xml
tests/: conftest.py  test_models.py  test_patcher.py  test_paths.py  test_tts.py
